# fpga_driver

./: .clangd  CMakeLists.txt  build.sh  compile_flags.txt  deploy.ps1  deploy.sh  run.sh
.cache/clangd/index/: NiFpga.c.724667871A2C8B38.idx  NiFpga.c.C1AA43899D5CD6FB.idx  NiFpga.h.07013F068D03E26E.idx  NiFpga.h.132393BAC5911D9E.idx  NiFpga_FPGA_CANBus_IMU_4module_IRQ.c.46CE67F52D9B0748.idx  NiFpga_FPGA_CANBus_IMU_4module_IRQ.c.D5991127B4AE50E8.idx  NiFpga_FPGA_CANBus_IMU_4module_IRQ.h.172781139421B94B.idx  NiFpga_FPGA_CANBus_IMU_4module_IRQ.h.6C77C3DA1D3C3DD0.idx  angle_convert.cpp.DC9B997E22254819.idx  angle_convert.hpp.E4202E597D82BE52.idx  can_packet.h.49FE985CC2CCC35D.idx  can_packet.h.A14B42A24A8FFF07.idx  case_enum.hpp.83D9269213281B7B.idx  case_enum.hpp.E69111FD064DC84F.idx  color.cpp.F0C4CC746800A9A3.idx  color.cpp.FB8B20A1525A9A95.idx  color.hpp.5EAB1AF2B5776103.idx  color.hpp.D554F2770D38C557.idx  console.cpp.038F0E46A84509DD.idx  console.cpp.307C9AFD2802316A.idx  console.hpp.B04E3440FB3BE9A6.idx  console.hpp.F3118652A107CDBD.idx  force_control.cpp.F7229C5BD03A6CA9.idx  force_control.hpp.3E94238BBAEC658B.idx  force_tracking.cpp.C3BFA28867B91815.idx  force_tracking.hpp.272064CE111C153D.idx  fpga_handler.cpp.747A82C19AE62CC1.idx  fpga_handler.cpp.FD4FDA25A901B6B6.idx  fpga_handler.hpp.C87DB8F825F128B8.idx  fpga_handler.hpp.E7D38EEE480B16EA.idx  fpga_server.cpp.B066CC92BF968CE7.idx  fpga_server.cpp.D1AEE5E3703D12B5.idx  fpga_server.hpp.826A290D8903D8AC.idx  fpga_server.hpp.DDE2A0E405C03F68.idx  fsm.cpp.8793823A3A953E38.idx  fsm.cpp.CC13DE977A6158A5.idx  fsm.hpp.06248F3B58B207B5.idx  fsm.hpp.34CBB0F174071256.idx  leg_kinematics.cpp.3A8D6B5227D294C8.idx  leg_kinematics.hpp.97AE49C4E4FDDD73.idx  (+16 more)
config/: .config.yaml.un~  _config.yaml  config.yaml  config.yaml~
include/: NiFpga_FPGA_CANBus_IMU_4module_IRQ.h  angle_convert.hpp  can_packet.h  case_enum.hpp  cmd_msg.hpp  color.hpp  console.hpp  force_control.hpp  force_tracking.hpp  fpga_handler.hpp  fpga_server.hpp  fsm.hpp  leg_kinematics.hpp  leg_module.hpp  linkleg_kinematics.hpp  lpf.hpp  mode.hpp  msg.hpp  pid.hpp  theta_error.hpp
log/: .~lock.powerboard_data20230615.csv#  .~lock.sample_test.csv#  log.txt  log_fsm.txt  powerboard_data.csv
src/: NiFpga_FPGA_CANBus_IMU_4module_IRQ.c  angle_convert.cpp  color.cpp  console.cpp  example.cpp  force_control.cpp  force_tracking.cpp  fpga_handler.cpp  fpga_server.cpp  fsm.cpp  leg_kinematics.cpp  leg_module.cpp  lpf.cpp  pid.cpp  publisher.cpp  test.cpp  theta_error.cpp
